--- a/Application/src/main/resources/templates/index.html
+++ b/Application/src/main/resources/templates/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
     <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta charset="UTF-8"/>
         <title>E-Prod High School</title>
+        <link rel="stylesheet" href="/css/style.css" />
     </head>
     <body>
-    
+        <h2>E-Prod High School Web Application</h2>
+        <p><a href="/classes/list">Classes List</a></p>
+        <p><a href="/students/list">Students List</a></p>
     </body>
- </html>
+</html>
